--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
       --font: "Gluten", system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
 
       /* Dimensioni font */
-      --title-size: 36px;
-      --sub-size: 24px;
-      --timer-size: 40px;
+      --title-size: 60px;
+      --sub-size: 40px;
+      --timer-size: 70px;
 
       /* Colore testo */
       --text-color: #0bc9cf;
@@ -123,7 +123,7 @@
 <body>
   <div class="overlay">
     <div class="hero floating">
-      <h1>ALLA NOSTRE VACANZE ALLE MALDIVE</h1>
+      <h1>ALLE NOSTRE VACANZE ALLE MALDIVE</h1>
       <p class="sub">mancano ancora</p>
       <div class="timer" id="timer">—</div>
     </div>
