--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
       --font: "Gluten", system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
 
       /* Dimensioni font */
-      --title-size: 60px;
-      --sub-size: 40px;
-      --timer-size: 70px;
+      --title-size: clamp(36px, 3vw, 60px);
+      --sub-size: clamp(24px, 2vw, 40px);
+      --timer-size: clamp(40px, 3.5vw, 70px);
+
 
       /* Colore testo */
       --text-color: #0bc9cf;
@@ -52,7 +53,6 @@
       top: var(--anchor-y);
       transform: translate(-50%, -50%);
       text-align: center;
-      width: min(980px, calc(100% - 40px));
       padding: 18px 18px;
 
       background: rgba(0,0,0,.18);
@@ -60,7 +60,11 @@
       backdrop-filter: blur(6px);
 
       box-shadow: 0 10px 40px rgba(0,0,0,.25);
+
+      white-space: nowrap;
+      max-width: 95vw;
     }
+
 
     /* Effetto floating */
     .floating{
