--- a/index.html
+++ b/index.html
@@ -140,7 +140,11 @@
 <body>
   <div class="overlay">
     <div class="hero floating">
-      <h1>ALLE NOSTRE VACANZE ALLE MALDIVE</h1>
+      <h1>
+      <span>ALLE NOSTRE VACANZE</span><br>
+      <span>ALLE MALDIVE</span>
+      </h1>
+
       <p class="sub">mancano ancora</p>
       <div class="timer" id="timer">—</div>
     </div>
